Use @use and @forwards instead of @import in Sass

--- a/index.scss
+++ b/index.scss
@@ -1,8 +1,7 @@
-@import "./utils/";
-@import "./debugger/";
-@import "./general";
-@import "./root-margin/";
-@import "./welcome/";
-@import "./tracked-element/";
+@forward "./debugger/";
+@forward "./general";
+@forward "./root-margin/";
+@forward "./welcome/";
+@forward "./tracked-element/";
 
-@import "./states";
+@forward "./states";
